--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,35 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    background-color: rgb(37, 38, 47);
+    padding: 20px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    border: solid 2px white;
+    background-color: black;
+    padding: 10px;
+
+    input {
+        border: solid 2px rgb(255, 183, 0);
+    }
+
+    
+button {
+    border: solid 2px rgb(221, 255, 0);
+    background-color: red;
+    width: 200px;
+    color: white;
+}
+}
+
+#followerslist {
+    color: white;
+}
+
+
+#home {
+    border: solid 2px red;
+    margin-top: 50px;
 }
